# penguinos

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pubspec.yaml  requirements.txt
android/app/: build.gradle
backend/: .env.example  .env.local.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.local.yaml  compose.yaml  docker-compose.yml  pyproject.toml
backend/docs/: db_schema.md  openapi.yaml
backend/dopios_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/mainApp/: admin.py  filters.py  models.py  serializers.py  story_generation.py  urls.py  views.py
backend/mainApp/management/commands/: clear_data.py  generate_stories.py
backend/mainApp/migrations/: 0001_initial.py  0002_language_rename_language_rawtext_language_char_and_more.py  0003_rename_language_fk_rawtext_language_and_more.py  0004_remove_rawtext_language_char.py  0005_llmtextwithtranslation.py  0006_delete_rawtext.py
backend/mainApp/prompts/: story_generation_prompts.py
backend/scripts/: generate_stories.py
dopios_backend/: settings.py  urls.py  wsgi.py
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: about_screen.dart  home_screen.dart
lib/widgets/: paragraph.dart  request_text_buttons.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
mainApp/: models.py  serializers.py  urls.py  views.py
mainApp/migrations/: 0004_remove_rawtext_language_char.py  (+2 more)
mobile/: .gitignore  pubspec.yaml
scripts/: generate_stories.py
test/: widget_test.dart
web/: manifest.json
(+26 files in other folders)
